// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CharacterBanner /> Battle Mode renders properly on battle mode 1`] = `
<div
  className="borderContainer"
>
  <div
    className="characterBanner"
  >
    <div
      className="flexColumn"
    >
      <span
        className="nameTag"
      >
        One
      </span>
      <FillableBar
        color="#F66"
        current={10}
        label="HP"
        max={10}
      />
    </div>
  </div>
</div>
`;

exports[`<CharacterBanner /> renders properly 1`] = `
<div
  className="borderContainer"
>
  <div
    className="characterBanner"
  >
    <React.Fragment>
      <div
        className="topRow"
      >
        <div
          className="flexBasisHalf flexColumn"
        >
          <span
            className="nameTag"
          >
            Character One
          </span>
          <span
            className="playerTag"
          >
            Player One
          </span>
        </div>
        <div
          className="flexColumn"
        >
          <FillableBar
            color="#F66"
            current={10}
            label="HP"
            max={10}
          />
          <FillableBar
            className="marginTopHalf"
            color="#66F"
            current={0}
            label="XP"
            max={300}
          />
        </div>
        <div
          className="flexColumn"
        >
          <span
            className="raceTag"
          >
            Race
          </span>
          <span
            className="classTag"
          >
            Class 1
          </span>
        </div>
      </div>
    </React.Fragment>
    <div
      className="bottomRow"
    >
      <div
        className="attributeContainer"
      >
        <AttributeBlock
          attribute="STR"
          value={10}
        />
        <AttributeBlock
          attribute="DEX"
          value={10}
        />
        <AttributeBlock
          attribute="CON"
          value={10}
        />
        <AttributeBlock
          attribute="INT"
          value={10}
        />
        <AttributeBlock
          attribute="WIS"
          value={10}
        />
        <AttributeBlock
          attribute="CHA"
          value={10}
        />
      </div>
      <div
        className="acShieldContainer"
      >
        <ACShield
          value={16}
        />
      </div>
    </div>
  </div>
</div>
`;
